--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 const blogTitle = 'My Astro Learning Blog';
 ---
@@ -12,9 +14,7 @@ const blogTitle = 'My Astro Learning Blog';
     <title>{blogTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
     <h1>{blogTitle}</h1>
 
     <p>
@@ -30,5 +30,9 @@ const blogTitle = 'My Astro Learning Blog';
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
+    <Footer />
+    <script>
+      import '../scripts/menu';
+    </script>
   </body>
 </html>
