--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+
 import '../styles/global.css';
 const homeTitle = 'Home';
 ---
@@ -12,9 +15,11 @@ const homeTitle = 'Home';
     <title>{homeTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+    <Header />
     <h1>My Astro site!</h1>
+    <Footer />
+    <script>
+      import '../scripts/menu';
+    </script>
   </body>
 </html>
